kubernetes/mailhog-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailhog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailhog
  template:
    metadata:
      labels:
        app: mailhog
    spec:
      containers:
      - name: mailhog
        image: mailhog/mailhog:latest
        ports:
        - containerPort: 1025 # SMTP port
        - containerPort: 8025 # Web UI port
---
apiVersion: v1
kind: Service
metadata:
  name: mailhog-service
spec:
  selector:
    app: mailhog
  ports:
    - name: smtp
      protocol: TCP
      port: 1025
      targetPort: 1025
    - name: ui
      protocol: TCP
      port: 8025
      targetPort: 8025
