kubernetes/ingress-k8s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:

spec:
  ingressClassName: public
  rules:
  - host: klewn-devops.duckdns.org 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spring-app-service
            port:
              number: 80

      - path: /db
        pathType: Prefix
        backend:
          service:
            name: adminer-service
            port:
              number: 8080

      - path: /mail
        pathType: Prefix
        backend:
          service:
            name: mailhog-service
            port:
              number: 8025
